--- a/fastBite-server/package.json
+++ b/fastBite-server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
+    "stripe": "^17.1.0",
     "sweetalert2": "^11.14.1"
   }
 }
